# musixbox

./: AUTHORS  Makefile.am  README.md  configure.in
doc/: Doxyfile
include/: Makefile.am  boxplayer.h  config.h.in  decode.h  decode_flac.h  decode_module.h  decode_mp3.h  decode_ogg.h  decode_tone.h  exceptions.h  folder_fs.h  formBrowser.h  formPlayer.h  info.h  info_mp3.h  info_sid.h  input.h  input_file.h  input_remote.h  interaction.h  interaction_avr.h  interaction_chain.h  interaction_sdl.h  interface.h  mixer.h  output.h  output_ao.h  output_null.h  output_swmixer.h  visualize.h  visualize_spectrum.h
include/core/: Makefile.am  decode.h  decode_adlib.h  decode_flac.h  decode_midi.h  decode_module.h  decode_mp3.h  decode_mp3_mpg123.h  decode_ogg.h  decode_sid.h  decode_tone.h  decoderfactory.h  exceptions.h  folder.h  folder_remote.h  folderfactory.h  info.h  info_adlib.h  info_flac.h  info_module.h  info_mp3.h  info_mp3_id3lib.h  info_mp3_mpg123.h  info_ogg.h  info_sid.h  infofactory.h  input.h  input_file.h  input_remote.h  mixer_oss.h  mixer_sw.h  output.h  output_alsa.h  output_ao.h  output_null.h  output_oss.h  outputmixerfactory.h  player.h  visualize.h  visualize_spectrum.h
include/misc/: Makefile.am  configuration.h  playlist.h  playlistitem.h
include/musixbox/: Makefile.am  formAlphaBrowser.h  formBrowser.h  formPlayer.h  formPlaylist.h  images.h  interaction.h  interface.h
include/musixcurses/: Makefile.am  curseplayer.h  interface.h  lyrics.h  lyricsbrowser.h  menu.h  menubrowser.h  menuplaylist.h
include/ui/: Makefile.am  control.h  font.h  form.h  image.h  interaction.h  interaction_avr.h  interaction_chain.h  interaction_sdl.h  label.h
lib/: Makefile.am
lib/core/: Makefile.am  decode.cc  decode_adlib.cc  decode_flac.cc  decode_midi.cc  decode_module.cc  decode_mp3.cc  decode_mp3_mpg123.cc  decode_ogg.cc  decode_sid.cc  decode_tone.cc  decoderfactory.cc  folder.cc  folder_fs.cc  folder_remote.cc  folderfactory.cc  info.cc  info_adlib.cc  info_flac.cc  info_module.cc  info_mp3.cc  info_mp3_id3lib.cc  info_ogg.cc  info_sid.cc  infofactory.cc  input_file.cc  input_remote.cc  mixer_oss.cc  output_alsa.cc  output_ao.cc  output_oss.cc  output_swmix.cc  outputmixerfactory.cc  player.cc  visualize_spectrum.cc
lib/misc/: Makefile.am  Makefile.in  configuration.cc  playlist.cc  playlistitem.cc
lib/ui/: Makefile.am  control.cc  font.cc  form.cc  image.cc  interaction.cc  interaction_avr.cc  interaction_chain.cc  interaction_sdl.cc  label.cc
scripts/: fetch-lyricwiki.pl
src/: Makefile  Makefile.am  decode.cc  decode_flac.cc  decode_module.cc  decode_mp3.cc  decode_ogg.cc  decode_sid.cc  folder.cc  folder_fs.cc  font.cc  formBrowser.cc  formPlayer.cc  info.cc  info_flac.cc  info_module.cc  info_mp3.cc  info_ogg.cc  input_file.cc  input_remote.cc  interaction.cc  interaction_avr.cc  interaction_chain.cc  interaction_sdl.cc  interface.cc  main.cc  mixer_oss.cc  output_ao.cc  output_swmix.cc  visualize_spectrum.cc
src/musixbox/: Makefile.am  boxplayer.cc  formAlphaBrowser.cc  formBrowser.cc  formPlayer.cc  formPlaylist.cc  images.cc  interaction.cc  interaction_avr.cc  interaction_chain.cc  interaction_sdl.cc  interface.cc  main.cc
src/musixcurses/: Makefile.am  curseplayer.cc  interface.cc  lyrics.cc  lyricsbrowser.cc  main.cc  menu.cc  menubrowser.cc  menuplaylist.cc
src/musixplay/: Makefile.am  main.cc
tools/: Makefile  convert_font.cc  do_fonts.sh  touch_test.cc
