noinst_HEADERS = \
	decode_flac.h decode.h decode_module.h decode_mp3.h decode_ogg.h \
	decoderfactory.h decode_sid.h decode_tone.h exceptions.h \
	folderfactory.h folder_fs.h folder.h info_flac.h info.h \
	info_module.h info_mp3.h info_ogg.h info_sid.h input_file.h \
	input.h input_remote.h mixer.h mixer_oss.h mixer_sw.h output_ao.h \
	output.h outputmixerfactory.h output_null.h output_swmixer.h \
	player.h visualize.h visualize_spectrum.h output_alsa.h \
	output_oss.h folder_remote.h
